--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="light">
+<html lang="en">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -21,8 +21,8 @@
                 <div class="needle seconds"></div>
                 <div class="center-point"></div>
             </div>
-            <div class="time">12:00</div>
-            <div class="date">Monday, Nov <span class="circle">2</span></div>
+            <div class="time"></div>
+            <div class="date"><span class="circle"></span></div>
         </div>
         <script src="./script.js"></script>
     </body>
